--- a/project.config
+++ b/project.config
@@ -94,3 +94,5 @@
 	push = block group Registered Users
 [access "refs/heads/main-cuttlefish-vendor-dev"]
 	label-Code-Review = -2..+2 group temp-261800889
+[access "refs/heads/build-tools"]
+	label-Code-Review = -2..+2 group mdb/android-build-soong-dev-team
